@@ -13,10 +13,16 @@ Core and Builtins
 Library
 -------
 
+- Issue #20144: inspect.Signature now supports parsing simple symbolic
+  constants as parameter default values in __text_signature__.
+
 - Issue #20072: Fixed multiple errors in tkinter with wantobjects is False.
 
 Tools/Demos
 -----------
+
+- Issue #20144: Argument Clinic now supports simple symbolic constants
+  as parameter default values.
 
 - Issue #20143: The line numbers reported in Argument Clinic errors are
   now more accurate.
